static/single.css
article {
    display: flex;
    width: 70%;
    margin: auto;
    flex-direction: column;
    justify-content: center;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    color: white;
}

main {
    margin: 1em 0;
}

main h1 {
    font-size: 500%;
    font-weight: 900;
    margin: 0.5em 0 0 0;
    line-height: 100%;
}

main h2 {
    font-size: 200%;
    font-weight: 600;
    margin: 0;
}

main h3 {
    font-size: 100%;
    font-weight: 600;
    margin: 0;
}

main p > a {
    text-decoration: underline;
}

.button {
    display: block;
    text-decoration: none;
    text-align: center;
    border: 1px solid transparent;
    border-radius: 4px;
    padding: .25em 1em;
    border: 1px solid #301a81;
    white-space: nowrap;
    max-width: 7em;
    margin-bottom: 0.5em;
}

/* Carousel */
.view {
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    overscroll-behavior-x: contain;
    -ms-overflow-style: none;
    scrollbar-width: none;
    border-radius: 4px;
}
.view > img {
    scroll-snap-align: start;
    flex-shrink: 0;
    aspect-ratio: 16 / 9;
    width: 100%;

    transition: transform 0.5s cubic-bezier(.25,.8,.25,1);
}

.controls {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 1em 0;
}

.controls a {
    width: 1em;
    height: 1em;
    text-align: center;
    line-height: 1em;
    padding: 0.15em;
    margin: 0 0.15em;

    text-decoration: none;
    cursor: pointer;
}

.controls a.slider {
    width: 0.5em;
    height: 0.5em;
    line-height: 0.5em;

    background-color: transparent;
    color: white;
    border: 0.1em solid white;
    border-radius: 50%;
}

.controls a.slider[data-active] {
    border: 0.1em solid transparent;
    background-color: white;
    transition: background-color 0.5s, border 0.5s;
}

.view::-webkit-scrollbar, .view::-webkit-scrollbar-thumb, .view::-webkit-scrollbar-track {
  width: 0;
  background: transparent;
}

footer {
    color: white;
    text-align: center;
    opacity: 0.5;
}

/* Mobile */
@media only screen and (max-width: 900px) {
  article {
    width: 100%;
  }
  main {
    text-align: center;
  }
  .links {
    text-align: center;
  }
  header {
    flex-direction: column;
  }
}

